--- a/chat/package.json
+++ b/chat/package.json
@@ -14,8 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.8",
-    "update": "^0.7.4",
+    "react-scripts": "^5.0.0-next.60",
+    "request": "^2.88.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.4.0"
   }
 }
